# MeTTa-Compiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  build_rust_parser  fault_fix_test2.txt
.cargo/: config.toml
.claude/: CLAUDE.md  QUICK_START_ROBOT_PLANNING.md  README.md  README_ROBOT_PLANNING.md  ROBOT_PLANNING.md  ROBOT_PLANNING_SUMMARY.md
.claude/archive/: DESIGN_COMPLIANCE_FIX.md  DOCUMENTATION_REORGANIZATION.md  DYNAMIC_PLANNING_COMPLETE.md  EVALUATION_SERIALIZATION_FIX.md  EXTRACT_OUTPUTS_SOLUTION.md  FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUCCESS.md  MULTIPLICITIES_BYTE_ARRAY_OPTIMIZATION.md  MULTISTEP_PLANNING_UPDATE.md  NONDETERMINISTIC_EVALUATION_COMPLETE.md  PARALLEL_EVALUATION_COMPLETE.md  PATHMAP_INTEGRATION_SUMMARY.md  PATHMAP_PAR_INTEGRATION_COMPLETE.md  SERIALIZE2_RESTORATION_GUIDE.md  THREADING_CONFIG_SUMMARY.md
.claude/docs/: DYNAMIC_PLANNING.md  EXTRACT_OUTPUTS_GUIDE.md  MULTISTEP_PLANNING.md  PRETTY_PRINTER_METTA_DISPLAY.md  QUICK_REFERENCE_EXTRACTION.md
.config/: nextest.toml
.github/workflows/: ci.yml  integration-tests.yml  nightly-tests.yml  publish-repos.yml  release.yml
benches/: algebraic_status_duplicate_detection.rs  branch_comparison.rs  bulk_operations.rs  bytecode_comparison.rs  cow_environment.rs  e2e.rs  e2e_throughput.rs  eval_profiling.rs  expression_parallelism.rs  iter_rules_bench.rs  jit_comparison.rs  jit_optimization_benchmarks.rs  jit_tier1_benchmarks.rs  kb_persistence.rs  memoization_benchmark.rs  mmverify_benchmark.rs  mork_evaluation.rs  pattern_match.rs  prefix_navigation_benchmarks.rs  rule_matching.rs  set_operations.rs  simd_micro.rs  snapshot_loading.rs  type_lookup.rs
benches/metta_samples/: cartesian_product_stress.metta  concurrent_space_operations.metta  constraint_search_simple.metta  fib.metta  grounded_tco_stress.metta  knowledge_graph.metta  lazy_eager_comparison.metta  metta_programming_stress.metta  multi_space_reasoning.metta  pattern_matching_stress.metta  tco_deep_recursion.metta  trampoline_stress.metta
benches/mmverify_samples/: verify_demo0_body.metta
docs/: ARCHITECTURE.md  BACKEND_API_REFERENCE.md  BUILTIN_FUNCTIONS_IMPLEMENTATION.md  COMPOSABILITY_TESTS.md  CONJUNCTION_PATTERN.md  CONTRIBUTING.md  FUTURE_ENHANCEMENTS.md  INTEGRATION_TESTING_IMPLEMENTATION.md  ISSUE_3_SATISFACTION.md  METTA_TYPE_SYSTEM_REFERENCE.md  MORK_SPECIAL_FORMS.md  MVP_BACKEND_COMPLETE.md  PERSISTENCE_IMPLEMENTATION.md  PR32_COMPLETION_ROADMAP.md  PR32_IMMEDIATE_FIXES.md  PR32_REVIEW_SUMMARY.md  README.md  REDUCTION_PREVENTION.md  REPL_ARCHITECTURE.md  REPL_FEATURES.md  REPL_USAGE.md  RHOLANG_BUILD_AUTOMATION.md  THREADING_MODEL.md  TYPE_SYSTEM_ANALYSIS.md  TYPE_SYSTEM_IMPLEMENTATION.md  TYPE_SYSTEM_RHOLANG_INTEGRATION.md
docs/architecture/: HYBRID_P2_PRIORITY_SCHEDULER.md  TIERED_COMPILER_IMPLEMENTATION_GUIDE.md
docs/archive/: PHASE_1_2_SUMMARY.md  RULE_MATCHING_OPTIMIZATION_SUMMARY.md  THREADING_AND_BASELINE_SUMMARY.md
docs/benchmarks/: BASELINE.md  BRANCH_COMPARISON_GUIDE.md  JIT_PHASE5_FORK_CHOICE.md  JIT_STAGE1_PERFORMANCE.md  JIT_STAGE2_PERFORMANCE.md  METTA_BENCHMARK_SUITE.md  PERFORMANCE_OPTIMIZATIONS.md  SCHEDULER_TUNING_JOURNAL.md  THREE_WAY_COMPARISON.md
examples/: README.md  advanced.metta  backend_interactive.rs  backend_usage.rs  backward_chaining.metta  bench_memory_test.rs  conjunction_demo.metta  conjunction_simple_test.metta  control_flow.metta  debug_has_sexpr_fact.rs  evaluation_control_demo.metta  fuzzy_matching_demo.rs  indenter_demo.rs  io_operations.metta  jit_memory_test.rs  jit_profile.rs  list_operations.metta  list_ops.metta  metta_rholang_example.rho  module_lib.metta  module_main.metta  mork_coalg_demo.metta  mork_complete_demo.metta  mork_exec_demo.metta  mork_lookup_demo.metta  mork_removal_demo.metta  mork_rulify_demo.metta  mvp_complete.rs  mvp_test.metta  mvp_test.rho  mvp_test_simplified.rho  pathmap_demo.metta  pattern_complex.metta  pattern_simple.metta  pattern_stress.metta  peano_demo.metta  robot_planning.rho  simple.metta  simple.rho  space_operations.metta  (+8 more)
integration/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DIRECT_RUST_INTEGRATION.md  DIRECT_RUST_SUMMARY.md  FFI_VS_DIRECT_COMPARISON.md  INDEX.md  INTEGRATION_STATUS.md  INTEGRATION_SUCCESS.md  PATHMAP_INTEGRATION.md  PATHMAP_PAR_USAGE.md  QUICKSTART.md  QUICK_START.md  README.md  README_PATHMAP.md  RHOLANG_INTEGRATION.md  RHOLANG_INTEGRATION_INDEX.md  RHOLANG_INTEGRATION_SUMMARY.md  RHOLANG_REGISTRY_PATTERN.md  RHOLANG_SYNC_GUIDE.md  SYNC_OPERATOR_SUMMARY.md  TESTING_GUIDE.md  TEST_HARNESS_README.md  TEST_HARNESS_STATUS.md  TEST_HARNESS_SUMMARY.md  integrate.sh  test_basic_evaluation.rho  test_composability.rho  test_control_flow.rho  test_edge_cases.rho  test_harness.rho  test_harness_composability.rho  test_harness_composability_readable.rho  test_harness_simple.rho  test_harness_validation.rho  test_metta_integration.rho  test_pathmap_run_method.rho  test_pathmap_simple.rho  test_pathmap_state.rho  test_repl_simulation.rho  test_rules.rho  (+1 more)
packaging/: README.md
scripts/: analyze_benchmark_results.py  build_pgo.sh  compare_branches.sh  profile_eval.sh  profile_mmverify.sh  profile_pattern_match.sh  profile_set_operations.sh
src/: config.rs  ffi.rs  ir.rs  lib.rs  main.rs  pathmap_par_integration.rs  rholang_integration.rs  sexpr.rs  tree_sitter_parser.rs
tests/: QUERY_LANGUAGE.md  README.md  ancestor_mm2_full.rs  ancestor_mm2_integration.rs  dynamic_exec.rs  fact_removal.rs  fuzzy_match_integration.rs  integration_tests.toml  mettatron_binary.rs  module_system.rs  peano_numbers.rs  rholang_integration.rs  tree_sitter_corpus.rs  utils.rs  wildcard_patterns.rs
tree-sitter-metta/: Cargo.toml  build.rs  grammar.js  package.json
tree-sitter-metta/bindings/rust/: lib.rs
tree-sitter-metta/queries/: highlights.scm  indents.scm
tree-sitter-metta/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-metta/test/corpus/: comments.metta  expressions.metta  literals.metta  operators.metta  real_world.metta  unicode.metta
(+625 files in other folders)
