[package]
name = "mettatron"
version = "0.1.0"
edition = "2021"
authors = ["F1R3FLY.io"]
description = "MeTTaTron - MeTTa language evaluator with lazy evaluation and pattern matching"
license = "Apache-2.0"
repository = "https://github.com/F1R3FLY-io/MeTTa-Compiler"
keywords = ["metta", "evaluator", "lisp", "pattern-matching"]
categories = ["compilers", "parser-implementations"]

[lib]
name = "mettatron"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mettatron"
path = "src/main.rs"

[dependencies]
# PathMap - Trie-map library used by MORK
pathmap = { path = "../PathMap", features = ["jemalloc", "arena_compact"] }
# MORK - MeTTa Optimal Reduction Kernel for pattern matching
mork = { path = "../MORK/kernel", features = ["interning"] }
# MORK expr - S-expression representation used by MORK (formerly mork-bytestring)
mork-expr = { path = "../MORK/expr" }
# MORK frontend - Parser for MORK s-expressions
mork-frontend = { path = "../MORK/frontend" }
# Models - Rholang protobuf models for PathMap Par integration
models = { path = "../f1r3node/models" }
# Tokio - Async runtime for parallel evaluation (optional)
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[features]
default = ["interning", "async"]
async = ["tokio"]
interning = []

[dev-dependencies]
# For integration tests
regex = "1.10"
nom = "7.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
