[package]
name = "mettatron"
version = "0.2.0"
edition = "2021"
authors = ["F1R3FLY.io"]
description = "MeTTaTron - MeTTa language evaluator with lazy evaluation and pattern matching"
license = "Apache-2.0"
repository = "https://github.com/F1R3FLY-io/MeTTa-Compiler"
keywords = ["metta", "evaluator", "lisp", "pattern-matching"]
categories = ["compilers", "parser-implementations"]

[lib]
name = "mettatron"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mettatron"
path = "src/main.rs"

[[bench]]
name = "rule_matching"
harness = false

[[bench]]
name = "pattern_match"
harness = false

[[bench]]
name = "type_lookup"
harness = false

[[bench]]
name = "prefix_navigation_benchmarks"
harness = false

[[bench]]
name = "bulk_operations"
harness = false

[[bench]]
name = "cow_environment"
harness = false

[[bench]]
name = "algebraic_status_duplicate_detection"
harness = false

[[bench]]
name = "expression_parallelism"
harness = false

[[bench]]
name = "branch_comparison"
harness = false

[[bench]]
name = "mork_evaluation"
harness = false

[dependencies]
# MORK - MeTTa Optimal Reduction Kernel for pattern matching
mork = { path = "../MORK/kernel", features = ["interning"] }
# MORK expr - S-expression representation used by MORK (formerly mork-bytestring)
mork-expr = { path = "../MORK/expr" }
# MORK frontend - Parser for MORK s-expressions
mork-frontend = { path = "../MORK/frontend" }
# MORK interning - Symbol interning for MORK
mork-interning = { path = "../MORK/interning" }
# Models - Rholang protobuf models for PathMap Par integration
models = { path = "../f1r3node/models" }
# Tokio - Async runtime for parallel evaluation (optional)
tokio = { version = "1", features = ["rt", "sync"], optional = true }

# PathMap - Trie-map library used by MORK
# Note: Windows is not currently supported due to jemalloc incompatibility
# MORK's workspace enables jemalloc which requires Unix build tools
pathmap = { path = "../PathMap", features = ["jemalloc", "arena_compact"] }
# pathmap = { git = "https://github.com/Adam-Vandervorst/PathMap.git", branch = "master", features = ["jemalloc", "arena_compact"] }
# pathmap = { version = "0.2.0-alpha0", features = ["jemalloc", "arena_compact"] }

# Tree-sitter - Parser for LSP support
tree-sitter = "0.25"
tree-sitter-metta = { path = "tree-sitter-metta" }

# REPL dependencies
rustyline = "14.0"
dirs = "5.0"
regex = "1.11"
ropey = "1.6"

# LRU cache for pattern caching optimization
lru = "0.12"

# DashMap - Concurrent HashMap for lock-free bytecode caching
dashmap = "6.1"

# GxHash - Fast, SIMD-accelerated hashing for bytecode cache keys
gxhash = "3.4"

# SmallVec - Stack-allocated vector for optimizing pattern matching bindings
smallvec = "1.11"

# lasso - Fast, thread-safe string interning for symbol tables (optional)
# Provides O(1) symbol comparison instead of O(n) string comparison
lasso = { version = "0.7", features = ["multi-threaded"], optional = true }

# liblevenshtein - Fuzzy string matching for "Did you mean?" suggestions
# liblevenshtein = { path = "../liblevenshtein-rust", features = ["pathmap-backend"] }
liblevenshtein = { version = "^0.7", features = ["pathmap-backend"] }

# Module system dependencies
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

# Note: jemalloc is already enabled globally via PathMap's features = ["jemalloc"]
# PathMap sets tikv-jemallocator as the global allocator, providing 100-1000× parallel speedup

# Itertools - Lazy iterator combinators for cartesian products and nondeterminism
itertools = "0.14"

# Cranelift JIT - Native code generation for hot bytecode paths
# Provides 2-5x additional speedup over bytecode VM for arithmetic chains
# Always included - tiered compilation is always enabled
cranelift = "0.126"
cranelift-frontend = "0.126"
cranelift-jit = "0.126"
cranelift-module = "0.126"
cranelift-native = "0.126"

# Rayon - Work-stealing thread pool for background compilation
rayon = "1.10"

# Crossbeam - Lock-free channels for custom eval thread pool
crossbeam-channel = "0.5"

# num_cpus - CPU count detection for thread pool sizing
num_cpus = "1.16"

# parking_lot - Faster mutexes and condition variables for priority scheduler
parking_lot = "0.12"

[features]
default = ["interning", "async"]
async = ["tokio"]
interning = []
# Symbol interning: O(1) symbol comparison via lasso crate
# Provides 5-10% improvement for rule-heavy workloads
symbol-interning = ["lasso"]

# NOTE: Bytecode VM and JIT compilation are now ALWAYS ENABLED
# The tiered compilation system provides automatic tier progression:
#   Tier 0: Tree-walker (0-1 executions)
#   Tier 1: Bytecode VM (2+ executions, compiled in background)
#   Tier 2: JIT Stage 1 (100+ executions, native code)
#   Tier 3: JIT Stage 2 (500+ executions, optimized native code)
# All compilation happens in the background via Rayon, so the evaluator
# is never blocked waiting for compilation.

# Legacy feature flags for backwards compatibility (now no-ops)
bytecode = []
jit = []

# Fuzzy suggestions: "Did you mean?" suggestions for typos
# DISABLED by default because it adds significant overhead (10-20%)
# Enable with: cargo build --release --features fuzzy-suggestions
fuzzy-suggestions = []

# Hybrid P2 Priority Scheduler: Custom priority-based thread pool
# DISABLED by default to share schedulers with Rholang (which uses Rayon/Tokio)
# When enabled, uses P2 priority scheduler for parallel workloads with
# sequential mode detection (< 2 concurrent evals uses Rayon for lower overhead)
# Enable with: cargo build --release --features hybrid-p2-priority-scheduler
hybrid-p2-priority-scheduler = []

[dev-dependencies]
# For integration tests
regex = "1.10"
nom = "7.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "process",
    "time",
    "sync",
    "macros",
] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.21"
paste = "1.0.15"
clap = { version = "4.5", features = ["derive"] }

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "e2e_throughput"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
strip = false        # Keep debug symbols for profiling
debug = true         # Enable line-level profiling

[profile.profiling]
inherits = "release"
strip = false        # Keep debug symbols for flamegraphs
debug = 1            # Line tables only (smaller than debug = true)

# Debian package metadata
[package.metadata.deb]
maintainer = "F1R3FLY.io <noreply@f1r3fly.io>"
copyright = "2024, F1R3FLY.io <noreply@f1r3fly.io>"
license-file = ["LICENSE", "4"]
extended-description = """\
MeTTaTron is a MeTTa language evaluator with lazy evaluation and pattern matching.
MeTTa is a language with LISP-like S-expression syntax supporting rules, control flow,
type assertions, and grounded functions."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    [
        "target/release/mettatron",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/rholang-cli",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/libmettatron.so",
        "usr/lib/",
        "644",
    ],
    [
        "target/release/libmettatron.rlib",
        "usr/lib/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/mettatron/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/mettatron/",
        "644",
    ],
    [
        "examples/*",
        "usr/share/doc/mettatron/examples/",
        "644",
    ],
]

# RPM package metadata
[package.metadata.generate-rpm]
license = "Apache-2.0"
assets = [
    { source = "target/release/mettatron", dest = "/usr/bin/mettatron", mode = "755" },
    { source = "target/release/rholang-cli", dest = "/usr/bin/rholang-cli", mode = "755" },
    { source = "target/release/libmettatron.so", dest = "/usr/lib64/libmettatron.so", mode = "644" },
    { source = "target/release/libmettatron.rlib", dest = "/usr/lib64/libmettatron.rlib", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/mettatron/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/mettatron/LICENSE", mode = "644", doc = true },
]
