[package]
name = "tree-sitter-metta"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for MeTTa language"
license = "MIT"
repository = "https://github.com/F1R3FLY-io/MeTTa-Compiler"

[lib]
name = "tree_sitter_metta"
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
